--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
     <div>
         <h2>Chatbot - Sistema Experto</h2>
         <div id="chatbox"></div>
-        <input type="text" id="userInput" placeholder="Escribe tu respuesta">
+        <input type="text" id="userInput" placeholder="Escribe tu respuesta si o no">
         <button onclick="sendMessage()">Enviar</button>
     </div>
     
